<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>topic_perf</name>
  <version>0.1.0</version>
  <description>Alternative tool to measure performance metrics of ROS 2 topics (hz, delay, bandwidth)</description>
  <maintainer email="jung.hr.1206@gmail.com">Hong-ryul Jung</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
